# kfchou.github.io

./: .gitignore  Gemfile  Makefile  README.md  _config.yml  index.html  index.markdown  pyproject.toml
_drafts/: 2024-10-21-parallelizing-pytest.md  2024-11-08-pytest-nox-poetry.md  2024-11-16-pytest-addopts.md  2024-12-05-class-diagram-generation.md  2024-12-21-tech-stack.md  2025-03-09-bug-hunting.md  2025-04-11-coding-agents.md  2025-04-20-web-authentication.md  2025-05-07-python-packaging.md  2025-05-09-package-depdencies.md  2025-05-09-poetry-toml-file.md  2025-06-03-local-dependencies.md  2025-06-03-vendoring.md  2025-07-20-utcp.md  2026-01-10-uv-monorepo.md  2026-03-28-voice-mode-wsl.md  MDS_blog.md  best_dish_bos23.md  my-first-draft.md  second-draft.md
_includes/: giscus-comments.html  meta.html  tweet.html
_layouts/: default.html  post.html
_pages/: about.md  food_recs.md
_posts/: 2023-04-20-welcome-to-jekyll.markdown  2023-10-06-funcanimation_generators.md  2023-7-30-boston-best-dishes-2023.m  2023-7-30-boston-best-dishes-2023.md  2024-01-09-reflections-as-a-ds-mentor.md  2024-02-08-biotech-salaries.md  2024-07-04-makefile-cheatsheet.md  2024-07-13-Boston-historical-map.md  2024-08-03-python-import-guide-for-matlab-users.md  2024-08-18-pyproject-toml-template.md  2024-08-26-repr-and-str-methods.md  2024-09-21-pytest-best-practices.md  2024-09-21-pytest-markers.md  2024-09-28-pytest-fixtures.md  2024-10-19-pytest-generate-tests.md  2024-10-26-uv-virtual-env-tools.md  2024-11-09-pytest-nox-uv.md  2024-11-16-pytest-addopts.md  2025-02-21-my-setup.md  (+32 more)
(+30 files in other folders)
