[project]
name = "kfchou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.5.0",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "weasyprint>=68.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
